# image-vectorizer

./: .gitignore  README.md  image_to_svg.py  pyproject.toml
